--- a/FilmReview/FilmReview/FilmReview.csproj
+++ b/FilmReview/FilmReview/FilmReview.csproj
@@ -201,6 +201,10 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Film.cs" />
+    <Compile Include="Models\FilmContext.cs" />
+    <Compile Include="Models\FilmInitialiser.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
