--- a/FilmReview/FilmReview/Web.config
+++ b/FilmReview/FilmReview/Web.config
@@ -13,6 +13,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-FilmReview-20190219112106.mdf;Initial Catalog=aspnet-FilmReview-20190219112106;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="FilmContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=FilmContext-20190227134051; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|FilmContext-20190227134051.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
